[tool.poetry]
name = "pybitespodcast"
version = "0.1.0"
description = ""
authors = ["Bob Belderbos <bobbelderbos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search = 'pybitespodcast.search:main'
